--- a/Sample/ContextView.Sample/ContextView.Sample/Pages/ListViewAllItemContextPage.xaml
+++ b/Sample/ContextView.Sample/ContextView.Sample/Pages/ListViewAllItemContextPage.xaml
@@ -7,7 +7,7 @@
     x:Name="ListViewAllItemContext">
     <ListView
         x:Name="Elements"
-        CachingStrategy="RetainElement"
+        CachingStrategy="RecycleElementAndDataTemplate"
         IsPullToRefreshEnabled="False"
         ItemsSource="{Binding Restourants}"
         SelectionMode="None">
