--- a/Sample/ContextView.Sample/ContextView.Sample/Pages/ListViewAllItemContextPage.xaml
+++ b/Sample/ContextView.Sample/ContextView.Sample/Pages/ListViewAllItemContextPage.xaml
@@ -14,7 +14,7 @@
         <ListView.ItemTemplate>
             <DataTemplate>
                 <ViewCell>
-                    <context:ContextView>
+                    <context:ContextView ContextMenuSize="150,100">
                         <context:ContextView.MenuItems>
                             <context:MenuItem Command="{Binding BindingContext.OpenWebSiteCommand, Source={x:Reference ListViewAllItemContext}}" CommandParameter="{Binding .}">
                                 <Label
